Added font awesome

--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/3731c45d9d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="/src/style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Anna Parkhomenko</h1>
     <p>paragraph</p>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
