Added main page content, styled it

--- a/index.html
+++ b/index.html
@@ -32,9 +32,45 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="/img/background.jpg" alt="" />
+    <img src="/img/background.jpg" alt="background" class="backgroud-img" />
+    <div class="prime-page">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end devloper from Ukraine, based in Italy</h2>
       <a href="">Contact me</a>
+    </div>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="project-description pe-4">
+            <h2 class="mt-5 text-end">Weather App</h2>
+            <p class="mt-4 mb-5 text-end">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5"/>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <img src="/img/plant-based.png" alt="" class="img-fluid rounded" />
+        </div>
+        <div class="col-md-6">
+          <div class="project-description ps-5">
+            <h2 class="mt-5 text-start">Plant-based Page</h2>
+            <p class="mt-4 mb-5 text-start">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
