--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <img src="/img/background.jpg" alt="background" class="backgroud-img" />
     <div class="prime-page">
       <h1>Anna Parkhomenko</h1>
-      <h2>Front-end devloper from Ukraine, based in Italy</h2>
+      <h2>Front-end developer from Ukraine, based in Italy</h2>
       <a href="">Contact me</a>
     </div>
     <div class="container">
