--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/style.css" />
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -28,7 +28,7 @@
       src="https://kit.fontawesome.com/3731c45d9d.js"
       crossorigin="anonymous"
     ></script>
-
+<link rel="stylesheet" href="/src/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -41,9 +41,9 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="project-description pe-4">
-            <h2 class="mt-5 text-end">Weather App</h2>
-            <p class="mt-4 mb-5 text-end">
+          <div class="weather-app pe-4">
+            <h2 class="mt-5">Weather App</h2>
+            <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -60,9 +60,9 @@
           <img src="/img/plant-based.png" alt="" class="img-fluid rounded" />
         </div>
         <div class="col-md-6">
-          <div class="project-description ps-5">
-            <h2 class="mt-5 text-start">Plant-based Page</h2>
-            <p class="mt-4 mb-5 text-start">
+          <div class="plant-based-page ps-5">
+            <h2 class="mt-5">Plant-based Page</h2>
+            <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
