--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       href="https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -28,7 +27,7 @@
       src="https://kit.fontawesome.com/3731c45d9d.js"
       crossorigin="anonymous"
     ></script>
-<link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -41,7 +40,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6">
-          <div class="weather-app pe-4">
+          <div class="weather-app">
             <h2 class="mt-5">Weather App</h2>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -52,7 +51,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5"/>
+          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5" />
         </div>
       </div>
       <div class="row mb-5">
@@ -60,7 +59,7 @@
           <img src="/img/plant-based.png" alt="" class="img-fluid rounded" />
         </div>
         <div class="col-md-6">
-          <div class="plant-based-page ps-5">
+          <div class="plant-based-page">
             <h2 class="mt-5">Plant-based Page</h2>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
