Added link to projects on the prime-page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <h2>Front-end developer from Ukraine, based in Italy</h2>
       <a href="">Contact me</a>
     </div>
-    <div class="container">
-      <div class="row mb-5">
+    <a href="index.html#first-project" class="projects-link">See my projects<br><span class="arrow">⌄</span></a>
+    <div class="container" >
+      <div class="row mb-5" id="first-project" >
         <div class="col-md-6">
           <div class="weather-app">
             <h2 class="mt-5">Weather App</h2>
@@ -51,7 +52,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5" />
+          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5 mt-4" />
         </div>
       </div>
       <div class="row mb-5">
