Created about-me page, styled it, made it responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <img src="/img/background.jpg" alt="background" class="backgroud-img" />
@@ -37,9 +37,11 @@
       <h2>Front-end developer from Ukraine, based in Italy</h2>
       <a href="">Contact me</a>
     </div>
-    <a href="index.html#first-project" class="projects-link">See my projects<br><span class="arrow">⌄</span></a>
-    <div class="container" >
-      <div class="row mb-5" id="first-project" >
+    <a href="index.html#first-project" class="see-portfolio-link"
+      >See my projects<br /><span class="arrow">⌄</span></a
+    >
+    <div class="container">
+      <div class="row mb-5" id="first-project">
         <div class="col-md-6">
           <div class="weather-app">
             <h2 class="mt-5">Weather App</h2>
@@ -49,15 +51,20 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
+            <a href="" class="project-link">Try it out</a>
           </div>
         </div>
-        <div class="col-md-6">
-          <img src="/img/weather.png" alt="" class="img-fluid rounded mb-5 mt-4" />
+        <div class="col-md-6 text-center">
+          <img
+            src="/img/weather.png"
+            alt=""
+            class="img-fluid rounded mb-5 mt-5 project-photo"
+          />
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6">
-          <img src="/img/plant-based.png" alt="" class="img-fluid rounded" />
+        <div class="col-md-6 text-center">
+          <img src="/img/plant-based.png" alt="" class="img-fluid rounded project-photo" />
         </div>
         <div class="col-md-6">
           <div class="plant-based-page">
@@ -68,6 +75,7 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
+            <a href="" class="project-link">Try it out</a>
           </div>
         </div>
       </div>
