--- a/about.html
+++ b/about.html
@@ -30,6 +30,30 @@
     <title>About page</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Anna Parkhomenko</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" href="/about.html">About</a>
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6 mt-5 about-me ms-xl-5">
@@ -39,7 +63,8 @@
             For anyone who wants to start learning code, this workshop is very
             interesting. You will be challenged with different exercises, and
             everything is well explained, homework and deadlines are good for
-            keep focus <br>  <br>
+            keep focus <br />
+            <br />
           </p>
           <a href="" class="about-me-page-link">See my projects</a>
         </div>
