--- a/index.html
+++ b/index.html
@@ -31,11 +31,35 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Anna Parkhomenko</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <img src="/img/background.jpg" alt="background" class="backgroud-img" />
     <div class="prime-page">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
-      <a href="">Contact me</a>
+      <a href="/contact.html">Contact me</a>
     </div>
     <a href="index.html#first-project" class="see-portfolio-link"
       >See my projects<br /><span class="arrow">⌄</span></a
@@ -64,7 +88,11 @@
       </div>
       <div class="row mb-5">
         <div class="col-md-6 text-center">
-          <img src="/img/plant-based.png" alt="" class="img-fluid rounded project-photo" />
+          <img
+            src="/img/plant-based.png"
+            alt=""
+            class="img-fluid rounded project-photo"
+          />
         </div>
         <div class="col-md-6">
           <div class="plant-based-page">
