--- a/work.html
+++ b/work.html
@@ -30,6 +30,30 @@
     <title>Document</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Anna Parkhomenko</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link active" href="/work.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container work-page">
       <h1 class="mb-5">My portfolio</h1>
       <div class="row">
@@ -49,7 +73,7 @@
         </div>
       </div>
       <div class="row mt-5 mb-4">
-        <div class="col-md-6 text-center ">
+        <div class="col-md-6 text-center">
           <img src="img/portfolio.png" alt="" class="img-fluid rounded mb-4" />
           <h3>Portfolio Project</h3>
           <p>This app is made with HTML, CSS, JavaScript</p>
