Added links to projects, updated some css, made it more universal

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="prime-page">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
-      <a href="/contact.html">Contact me</a>
+      <a href="/contact.html" class="main-button button">Contact me</a>
     </div>
     <a href="index.html#first-project" class="see-portfolio-link"
       >See my projects<br /><span class="arrow">⌄</span></a
@@ -67,43 +67,49 @@
     <div class="container">
       <div class="row mb-5" id="first-project">
         <div class="col-md-6">
-          <div class="weather-app">
-            <h2 class="mt-5">Weather App</h2>
+          <div class="description text-end pt-4 mt-5">
+            <h2>Weather App</h2>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="" class="project-link">Try it out</a>
+            <a
+              href="https://ephemeral-kataifi-b80640.netlify.app"
+              class="secondary-button button"
+              target="_blank"
+              >Try it out</a
+            >
           </div>
         </div>
         <div class="col-md-6 text-center">
           <img
             src="/img/weather.png"
             alt=""
-            class="img-fluid rounded mb-5 mt-5 project-photo"
+            class="img-fluid rounded mb-5 mt-5"
           />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6 text-center">
-          <img
-            src="/img/plant-based.png"
-            alt=""
-            class="img-fluid rounded project-photo"
-          />
+          <img src="/img/portfolio.png" alt="" class="img-fluid rounded" />
         </div>
         <div class="col-md-6">
-          <div class="plant-based-page">
-            <h2 class="mt-5">Plant-based Page</h2>
+          <div class="description ps-5">
+            <h2>Portfolio Project</h2>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="" class="project-link">Try it out</a>
+            <a
+              href="https://imaginative-biscochitos-9ed4a9.netlify.app"
+              class="secondary-button button"
+              target="_blank"
+              >Try it out</a
+            >
           </div>
         </div>
       </div>
