--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mt-5 about-me ms-xl-5">
+        <div class="col-md-6 mt-5 ms-xl-5 description">
           <h1>Hi, I am Anna Parkhomenko</h1>
           <h2>Front-end developer based in Italy</h2>
           <p>
@@ -66,7 +66,7 @@
             keep focus <br />
             <br />
           </p>
-          <a href="" class="about-me-page-link">See my projects</a>
+          <a href="" class="main-button button">See my projects</a>
         </div>
         <div class="col-md-6 text-center">
           <img
