Added footer to all pages, addded links, optimized css

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/">Anna Parkhomenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -64,11 +64,41 @@
       <i class="fa-brands fa-linkedin mt-5 pe-1"></i>
       <p class="d-inline">LinkedIn</p>
       <br />
-      <a href="">Anna Parkhomenko</a><br />
+      <a
+        href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
+        target="_blank"
+        >Anna Parkhomenko</a
+      ><br />
       <i class="fa-brands fa-instagram mt-5 pe-1"></i>
       <p class="d-inline">Instagram</p>
       <br />
-      <a href="">@jesuisannie</a>
+      <a
+        href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
+        target="_blank"
+        >@jesuisannie</a
+      >
     </div>
+    <footer>
+      <div class="text-center mb-4 mt-5">
+        <hr />
+        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+          >aparkhomenko21@gmail.com</a
+        >
+        <a
+          href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin mt-3 p-2"></i
+        ></a>
+        <a href="https://github.com/aparkhomenko21" target="_blank"
+          ><i class="fa-brands fa-github p-2"></i
+        ></a>
+        <a
+          href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
+          target="_blank"
+          ><i class="fa-brands fa-instagram p-2"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
