--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/">Anna Parkhomenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -56,19 +56,22 @@
       </div>
     </nav>
     <img src="/img/background.jpg" alt="background" class="backgroud-img" />
-    <div class="prime-page">
+    <div class="prime-page text-center">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
-      <a href="/contact.html" class="main-button button">Contact me</a>
+      <a href="/contact.html" class="main-button button prime-page-link"
+        >Contact me</a
+      >
+      <a href="index.html#first-project" class="see-portfolio-link"
+        >See my projects<br /><span class="arrow">⌄</span></a
+      >
     </div>
-    <a href="index.html#first-project" class="see-portfolio-link"
-      >See my projects<br /><span class="arrow">⌄</span></a
-    >
+
     <div class="container">
       <div class="row mb-5" id="first-project">
         <div class="col-md-6">
-          <div class="description text-end pt-4 mt-5">
-            <h2>Weather App</h2>
+          <div class="description text-end text-center-md pt-4 mt-5">
+            <h3>Weather App</h3>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -97,7 +100,7 @@
         </div>
         <div class="col-md-6">
           <div class="description ps-5">
-            <h2>Portfolio Project</h2>
+            <h3>Portfolio Project</h3>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -113,6 +116,31 @@
           </div>
         </div>
       </div>
+      <div class="text-center p-5">
+        <a href="/work.html" class="main-button button"> See More</a>
+      </div>
     </div>
+    <footer>
+      <div class="text-center mb-4 mt-5">
+        <hr />
+        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+          >aparkhomenko21@gmail.com</a
+        >
+        <a
+          href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin mt-3 p-2"></i
+        ></a>
+        <a href="https://github.com/aparkhomenko21" target="_blank"
+          ><i class="fa-brands fa-github p-2"></i
+        ></a>
+        <a
+          href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
+          target="_blank"
+          ><i class="fa-brands fa-instagram p-2"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
