Added title to navigation links

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Portfolio</title>
+    <title>Front-end developer - Anna Parkhomenko</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand pb-3" href="/">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/" title="Homepage">Anna Parkhomenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -47,15 +47,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/about.html">About</a>
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+            <a class="nav-link" href="/about.html" title="About Anna">About</a>
+            <a class="nav-link" href="/work.html" title="Anna's work">Work</a>
+            <a class="nav-link" href="/contact.html" title=" Contact Anna">Contact</a>
           </div>
         </div>
       </div>
     </nav>
-    <img src="/img/background.jpg" alt="background" class="backgroud-img" />
+    <img src="/img/background.jpg" class="backgroud-img" />
     <div class="prime-page text-center">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
