--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand pb-3" href="/">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/" title="Homepage">Anna Parkhomenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,10 +46,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" href="/about.html">About</a>
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" aria-current="page" href="/" title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link active" href="/about.html" title="About Anna"
+              >About</a
+            >
+            <a class="nav-link" href="/work.html" title="Anna's Work">Work</a>
+            <a class="nav-link" href="/contact.html" title="Contact Anna"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
