Fixed index.html responsiveness, cleaned css

--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand pb-3" href="/" title="Homepage">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/" title="Homepage"
+          >Anna Parkhomenko</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -72,7 +74,7 @@
             keep focus <br />
             <br />
           </p>
-          <a href="" class="main-button button">See my projects</a>
+          <a href="/work.html" class="main-button button">See my projects</a>
         </div>
         <div class="col-md-6 text-end">
           <img
