--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand pb-3" href="/" title="Homepage">Anna Parkhomenko</a>
+        <a class="navbar-brand pb-3" href="/" title="Homepage"
+          >Anna Parkhomenko</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -47,10 +49,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
+              >Home</a
+            >
             <a class="nav-link" href="/about.html" title="About Anna">About</a>
             <a class="nav-link" href="/work.html" title="Anna's work">Work</a>
-            <a class="nav-link" href="/contact.html" title=" Contact Anna">Contact</a>
+            <a class="nav-link" href="/contact.html" title=" Contact Anna"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -59,7 +69,7 @@
     <div class="prime-page text-center">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
-      <a href="/contact.html" class="main-button button prime-page-link"
+      <a href="/contact.html" class="main-button button prime-page-button"
         >Contact me</a
       >
       <a href="index.html#first-project" class="see-portfolio-link"
@@ -70,7 +80,7 @@
     <div class="container">
       <div class="row mb-5" id="first-project">
         <div class="col-md-6">
-          <div class="description text-end text-center-md pt-4 mt-5">
+          <div class="description text-end mt-5">
             <h3>Weather App</h3>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -95,11 +105,11 @@
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6 text-center">
+        <div class="col-md-6">
           <img src="/img/portfolio.png" alt="" class="img-fluid rounded" />
         </div>
         <div class="col-md-6">
-          <div class="description ps-5">
+          <div class="description">
             <h3>Portfolio Project</h3>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
