--- a/work.html
+++ b/work.html
@@ -66,23 +66,36 @@
       <h1 class="mb-5">My portfolio</h1>
       <div class="row">
         <div class="col-md-6 text-center">
-          <img src="img/weather.png" alt="" class="img-fluid rounded mb-4" />
+          <a href="https://ephemeral-kataifi-b80640.netlify.app" target="_blank"
+            ><img
+              src="img/weather.png"
+              alt=""
+              class="img-fluid rounded mb-4 button"
+          /></a>
           <h3>Weather App</h3>
           <p>This app is made with HTML, CSS, JavaScript</p>
         </div>
         <div class="col-md-6 text-center">
-          <img
-            src="img/plant-based.png"
-            alt=""
-            class="img-fluid rounded mb-4"
-          />
+          <a href=""
+            ><img
+              src="img/plant-based.png"
+              alt=""
+              class="img-fluid rounded mb-4 button"
+          /></a>
           <h3>Plant-based project</h3>
           <p>This project is made with HTML and CSS</p>
         </div>
       </div>
       <div class="row mt-5 mb-4">
         <div class="col-md-6 text-center">
-          <img src="img/portfolio.png" alt="" class="img-fluid rounded mb-4" />
+          <a
+            href="https://imaginative-biscochitos-9ed4a9.netlify.app"
+            target="_blank"
+            ><img
+              src="img/portfolio.png"
+              alt=""
+              class="img-fluid rounded mb-4 button"
+          /></a>
           <h3>Portfolio Project</h3>
           <p>This app is made with HTML, CSS, JavaScript</p>
         </div>
