Fixed responsiveness on all pages, finsihed cleaning css

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
           <img
             src="/img/my-photo.jpg"
             alt=""
-            class="img-fluid my-photo rounded-2 ms-5"
+            class="img-fluid my-photo rounded-2"
           />
         </div>
       </div>
