updated css on about page, made elements more aligned, added new project to work page

--- a/about.html
+++ b/about.html
@@ -64,9 +64,9 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mt-5 ms-xl-5 description">
+        <div class="col-md-6 pt-5 description text-end">
           <h1>Hi, I am Anna Parkhomenko</h1>
-          <h2>Front-end developer based in Italy</h2>
+          <h2 class="pt-1 pb-3">Front-end developer based in Italy</h2>
           <p>
             For anyone who wants to start learning code, this workshop is very
             interesting. You will be challenged with different exercises, and
