--- a/work.html
+++ b/work.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
@@ -63,7 +62,7 @@
       </div>
     </nav>
     <div class="container work-page">
-      <h1 class="mb-5">My portfolio</h1>
+      <h1 class="mb-5">My Projects</h1>
       <div class="row">
         <div class="col-md-6 text-center">
           <a href="https://ephemeral-kataifi-b80640.netlify.app" target="_blank"
@@ -73,10 +72,22 @@
               class="img-fluid rounded mb-4 button"
           /></a>
           <h3>Weather App</h3>
-          <p>This app is made with HTML, CSS, JavaScript</p>
+          <p>This app is made with HTML, CSS, JavaScript, Boostrap</p>
         </div>
         <div class="col-md-6 text-center">
-          <a href=""
+          <a href="https://taupe-pastelito-fc1c46.netlify.app"
+            ><img
+              src="img/portfolio-2.png"
+              alt=""
+              class="img-fluid rounded mb-4 button border border-light border-opacity-75"
+          /></a>
+          <h3>Current portfolio</h3>
+          <p>This project is made with HTML, CSS, Boostrap</p>
+        </div>
+      </div>
+      <div class="row mt-5 mb-4">
+        <div class="col-md-6 text-center">
+          <a href="" target="_blank"
             ><img
               src="img/plant-based.png"
               alt=""
@@ -85,8 +96,6 @@
           <h3>Plant-based project</h3>
           <p>This project is made with HTML and CSS</p>
         </div>
-      </div>
-      <div class="row mt-5 mb-4">
         <div class="col-md-6 text-center">
           <a
             href="https://imaginative-biscochitos-9ed4a9.netlify.app"
@@ -96,8 +105,8 @@
               alt=""
               class="img-fluid rounded mb-4 button"
           /></a>
-          <h3>Portfolio Project</h3>
-          <p>This app is made with HTML, CSS, JavaScript</p>
+          <h3>Personal Webpage</h3>
+          <p>This project is made with HTML, CSS, Boostrap</p>
         </div>
       </div>
     </div>
