Made website SEO friendly

--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This page tels about the front-end developer Anna Parkhomenko, her experience, skills and also projects she worked on."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>About page</title>
+    <title>About Anna - Anna Parkhomenko</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -74,12 +78,14 @@
             keep focus <br />
             <br />
           </p>
-          <a href="/work.html" class="main-button button">See my projects</a>
+          <a href="/work.html" class="main-button button" title="Anna's Work"
+            >See my projects</a
+          >
         </div>
         <div class="col-md-6 text-end">
           <img
             src="/img/my-photo.jpg"
-            alt=""
+            alt="Photo of Anna"
             class="img-fluid my-photo rounded-2"
           />
         </div>
@@ -88,21 +94,29 @@
     <footer>
       <div class="text-center mb-4 mt-5">
         <hr />
-        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+        <a
+          href="mailto:aparkhomenko21@gmail.com"
+          class="d-block mt-5"
+          title="Email Anna"
           >aparkhomenko21@gmail.com</a
         >
         <a
           href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
           target="_blank"
+          title="LinkedIn profile"
         >
           <i class="fa-brands fa-linkedin mt-3 p-2"></i
         ></a>
-        <a href="https://github.com/aparkhomenko21" target="_blank"
+        <a
+          href="https://github.com/aparkhomenko21"
+          target="_blank"
+          title="Github profile"
           ><i class="fa-brands fa-github p-2"></i
         ></a>
         <a
           href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
           target="_blank"
+          title="Instagram profile"
           ><i class="fa-brands fa-instagram p-2"></i
         ></a>
       </div>
