--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="description"
+      content="This is a homepage of a front-end developer Anna Parkhomenko's webpage. Here you can find preview of her projects."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -58,7 +61,7 @@
             >
             <a class="nav-link" href="/about.html" title="About Anna">About</a>
             <a class="nav-link" href="/work.html" title="Anna's work">Work</a>
-            <a class="nav-link" href="/contact.html" title=" Contact Anna"
+            <a class="nav-link" href="/contact.html" title="Contact Anna"
               >Contact</a
             >
           </div>
@@ -69,10 +72,16 @@
     <div class="prime-page text-center">
       <h1>Anna Parkhomenko</h1>
       <h2>Front-end developer from Ukraine, based in Italy</h2>
-      <a href="/contact.html" class="main-button button prime-page-button"
+      <a
+        href="/contact.html"
+        class="main-button button prime-page-button"
+        title="Contact Anna"
         >Contact me</a
       >
-      <a href="index.html#first-project" class="see-portfolio-link"
+      <a
+        href="index.html#first-project"
+        class="see-portfolio-link"
+        title="Anna's work"
         >See my projects<br /><span class="arrow">⌄</span></a
       >
     </div>
@@ -92,6 +101,7 @@
               href="https://ephemeral-kataifi-b80640.netlify.app"
               class="secondary-button button"
               target="_blank"
+              title="Weather App"
               >Try it out</a
             >
           </div>
@@ -99,18 +109,22 @@
         <div class="col-md-6 text-center">
           <img
             src="/img/weather.png"
-            alt=""
+            alt="Weather app preview"
             class="img-fluid rounded mb-5 mt-5"
           />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6">
-          <img src="/img/portfolio.png" alt="" class="img-fluid rounded" />
+          <img
+            src="/img/portfolio.png"
+            alt="Personal webpage preview"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <div class="description">
-            <h3>Portfolio Project</h3>
+            <h3>Personal Webpage</h3>
             <p class="mt-4 mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -121,33 +135,44 @@
               href="https://imaginative-biscochitos-9ed4a9.netlify.app"
               class="secondary-button button"
               target="_blank"
+              title="Personal webpage project"
               >Try it out</a
             >
           </div>
         </div>
       </div>
       <div class="text-center p-5">
-        <a href="/work.html" class="main-button button"> See More</a>
+        <a href="/work.html" class="main-button button" title="Anna's Work">
+          See More</a
+        >
       </div>
     </div>
     <footer>
       <div class="text-center mb-4 mt-5">
         <hr />
-        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+        <a
+          href="mailto:aparkhomenko21@gmail.com"
+          class="d-block mt-5"
+          title="Email Anna"
           >aparkhomenko21@gmail.com</a
         >
         <a
           href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
           target="_blank"
+          title="LinkedIn profile"
         >
           <i class="fa-brands fa-linkedin mt-3 p-2"></i
         ></a>
-        <a href="https://github.com/aparkhomenko21" target="_blank"
+        <a
+          href="https://github.com/aparkhomenko21"
+          target="_blank"
+          title="Github profile"
           ><i class="fa-brands fa-github p-2"></i
         ></a>
         <a
           href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
           target="_blank"
+          title="Instagram profile"
           ><i class="fa-brands fa-instagram p-2"></i
         ></a>
       </div>
