--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="On this page you can find all contact details of front`end developer Anna Parkhomenko. Contact for work inquiries."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Contact Details - Anna Parkhomenko</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -65,7 +69,8 @@
       <i class="fa-solid fa-envelope mt-5 pe-1"></i>
       <p class="d-inline">Email</p>
       <br />
-      <a href="mailto:aparkhomenko21@gmail.com">aparkhomenko21@gmail.com</a
+      <a href="mailto:aparkhomenko21@gmail.com" title="Email Anna"
+        >aparkhomenko21@gmail.com</a
       ><br />
       <i class="fa-brands fa-linkedin mt-5 pe-1"></i>
       <p class="d-inline">LinkedIn</p>
@@ -73,6 +78,7 @@
       <a
         href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
         target="_blank"
+        title="LinkedIn profile"
         >Anna Parkhomenko</a
       ><br />
       <i class="fa-brands fa-instagram mt-5 pe-1"></i>
@@ -81,27 +87,36 @@
       <a
         href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
         target="_blank"
+        title="Instagram profile"
         >@jesuisannie</a
       >
     </div>
     <footer>
       <div class="text-center mb-4 mt-5">
         <hr />
-        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+        <a
+          href="mailto:aparkhomenko21@gmail.com"
+          class="d-block mt-5"
+          title="Email Anna"
           >aparkhomenko21@gmail.com</a
         >
         <a
           href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
           target="_blank"
+          title="LinkedIn profile"
         >
           <i class="fa-brands fa-linkedin mt-3 p-2"></i
         ></a>
-        <a href="https://github.com/aparkhomenko21" target="_blank"
+        <a
+          href="https://github.com/aparkhomenko21"
+          target="_blank"
+          title="Github profile"
           ><i class="fa-brands fa-github p-2"></i
         ></a>
         <a
           href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
           target="_blank"
+          title="Instagram profile"
           ><i class="fa-brands fa-instagram p-2"></i
         ></a>
       </div>
