--- a/work.html
+++ b/work.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a portfolio of a front-end developer Anna Parkhomenko. Here you can find all projects she worked on."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Document</title>
+    <title>Anna's Projects - Anna Parkhomenko</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -68,7 +72,7 @@
           <a href="https://ephemeral-kataifi-b80640.netlify.app" target="_blank"
             ><img
               src="img/weather.png"
-              alt=""
+              alt="Weather app preview"
               class="img-fluid rounded mb-4 button"
           /></a>
           <h3>Weather App</h3>
@@ -78,7 +82,7 @@
           <a href="https://taupe-pastelito-fc1c46.netlify.app"
             ><img
               src="img/portfolio-2.png"
-              alt=""
+              alt="Poprtfolio project preview"
               class="img-fluid rounded mb-4 button border border-light border-opacity-75"
           /></a>
           <h3>Current portfolio</h3>
@@ -90,7 +94,7 @@
           <a href="" target="_blank"
             ><img
               src="img/plant-based.png"
-              alt=""
+              alt="Plant-based project preview"
               class="img-fluid rounded mb-4 button"
           /></a>
           <h3>Plant-based project</h3>
@@ -102,7 +106,7 @@
             target="_blank"
             ><img
               src="img/portfolio.png"
-              alt=""
+              alt="Personal webpage preview"
               class="img-fluid rounded mb-4 button"
           /></a>
           <h3>Personal Webpage</h3>
@@ -113,21 +117,29 @@
     <footer>
       <div class="text-center mb-4 mt-5">
         <hr />
-        <a href="mailto:aparkhomenko21@gmail.com" class="d-block mt-5"
+        <a
+          href="mailto:aparkhomenko21@gmail.com"
+          class="d-block mt-5"
+          title="Email Anna"
           >aparkhomenko21@gmail.com</a
         >
         <a
           href="https://www.linkedin.com/in/anna-parkhomenko-b95957253/"
           target="_blank"
+          title="LinkedIn profile"
         >
           <i class="fa-brands fa-linkedin mt-3 p-2"></i
         ></a>
-        <a href="https://github.com/aparkhomenko21" target="_blank"
+        <a
+          href="https://github.com/aparkhomenko21"
+          target="_blank"
+          title="Github profile"
           ><i class="fa-brands fa-github p-2"></i
         ></a>
         <a
           href="https://instagram.com/jesuisanniie?igshid=YmMyMTA2M2Y="
           target="_blank"
+          title="Instagram profile"
           ><i class="fa-brands fa-instagram p-2"></i
         ></a>
       </div>
