Added relevant content description to index and about pages

--- a/about.html
+++ b/about.html
@@ -72,10 +72,11 @@
           <h1>Hi, I am Anna Parkhomenko</h1>
           <h2 class="pt-1 pb-3">Front-end developer based in Italy</h2>
           <p>
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus <br />
+            I build and design websites of different natures. Among my skills is
+            HTML, CSS, JavaScript, API, Boostrap, Figma and I'm always striving
+            for more. In my work a pay a lot of attention on responsivness,
+            functionality, optimization, UI and UX. Currently accepting offers
+            for both full-time job and individual projects.<br />
             <br />
           </p>
           <a href="/work.html" class="main-button button" title="Anna's Work"
