--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
           <div class="description text-end mt-5">
             <h3>Weather App</h3>
             <p class="mt-4 mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              This weather app was built with the use of HTML, CSS, Boostrap and
+              JavaScript. Thanks to integrated weather API, you can search any
+              city in the world and get precise temperature, forecast and a
+              bunch of other things. With the help of geolocation API you can
+              get the weather forecast, based on your perosnal location.
             </p>
             <a
               href="https://ephemeral-kataifi-b80640.netlify.app"
@@ -126,10 +127,11 @@
           <div class="description">
             <h3>Personal Webpage</h3>
             <p class="mt-4 mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              This webpage was built with HTML, CSS and Boostrap. It was
+              designed as a personal portfolio, consists of multiple pages,
+              features some projects, personal information and contact details.
+              Additionaly, it is completely responsive and works effectively
+              both on desktop and mobile devices.
             </p>
             <a
               href="https://imaginative-biscochitos-9ed4a9.netlify.app"
