Added link to the github repository of this project

--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
           title="Instagram profile"
           ><i class="fa-brands fa-instagram p-2"></i
         ></a>
+        <p class="mt-4">
+          <a
+            href="https://github.com/aparkhomenko21/portfolio-project"
+            target="_blank"
+            title="Github repository of the project"
+            >Open-source code</a
+          >
+          by Anna Parkhomenko
+        </p>
       </div>
     </footer>
   </body>
